# apache-airflow-providers-teradata

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  PROVIDERS_CHANGES_2020.09.30.md  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml
airflow/: __init__.py
airflow/providers/teradata/: get_provider_info.py
airflow/providers/teradata/hooks/: ttu.py
airflow/providers/teradata/operators/: fastexport.py  fastload.py
apache_airflow_providers_teradata/: cli.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example_dags/: dummy_load.csv  example_execute_bteq.py  example_export_csv.py  example_load_csv.py
operators/: bteq.py  fastexport.py
tests/: test_apache_airflow_providers_teradata.py
tests/airflow/providers/teradata/hooks/: simple.py  test_ttu.py
tests/hooks/: new_test_ttu.py
