[bumpversion]
current_version = 1.0.10
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:airflow/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
python-tag = py3

[options.entry_points]
apache_airflow_provider = 
	provider_info=airflow.providers.teradata.get_provider_info:get_provider_info

[files]
packages = airflow.providers.teradata

[easy_install]


[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

